# tomate

./: LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg  tomate.py
scripts/: watch-tomate  watch-tomate-py
tomate/: cli.py
