[metadata]
name = tomate
version = attr: tomate.__version__
description = A minimalist pomodoro timer
long_description = file: README.md
url = https://github.com/abusque/tomate
author = Antoine Busque
author_email = antoinebusque@gmail.com
license = MIT
keywords = pomodoro, timer
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    tomate = tomate.cli:main
